style(mediacard): fix loading focus-visible not visible

--- a/src/Clients/Shared/UI/Components/MediaCard.razor.css
+++ b/src/Clients/Shared/UI/Components/MediaCard.razor.css
@@ -101,6 +101,7 @@
     justify-content: center;
     align-items: center;
     pointer-events: none;
+    z-index: 2;
 }
 
 ::deep .media-card-overlay .k7-fab {
